<resources>
    <string name="app_name">FootballTrainerToolApp</string>

    <string name="title_activity_match_list">MatchListActivity</string>

    <string name="match_list">Match Liste</string>
    <string name="player_list">Spieler Liste</string>
    <string name="start_match_list">Match starten</string>

    <string name="title_add_player">Spieler hinzufügen</string>
    <string name="title_edit_player">Spieler bearbeiten</string>
    <string name="title_delete_player">Spieler löschen</string>

    <string name="title_add_match">Match hinzufügen</string>
    <string name="title_edit_match">Match bearbeiten</string>
    <string name="title_delete_match">Match löschen</string>

    <string name="title_delete_event">Event löschen</string>

    <string name="title_finish_match">Match beenden</string>

    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="playernumber">Spieler Nummer</string>

    <string name="message_delete_player">Wollen Sie diesen Spieler löschen</string>
    <string name="message_delete_event">Wollen Sie diesen Event löschen</string>
    <string name="message_save_match">Wollen Sie diesen Match speichern</string>

    <string name="hometeam">Heim Mannschaft</string>
    <string name="guestteam">Gast Mannschaft</string>
    <string name="championship_play">Meisterschaftsspiel</string>
    <string name="testplay_play">Testspiel</string>

    <string name="message_delete_match">Wollen Sie diesen Match löschen</string>
    <string name="homegame">Heimspiel</string>
    <string name="awaygame">Auswärtsspiel</string>

    <string name="player_event">Spieler Event</string>
    <string name="match_event">Match Event</string>
    <string name="history">Verlauf</string>

    <string name="next">Weiter</string>
    <string name="start_match">Match Start</string>
    <string name="pause_match">Match Pause</string>
    <string name="finish_match">Match Ende</string>
    <string name="goal">GOAL</string>

    <string name="eventtype_own_player_present">ANWESEND</string>
    <string name="eventtype_own_player_absent">ABWESEND</string>
    <string name="eventtype_own_player_goal">GOAL</string>
    <string name="eventtype_own_player_assist">ASSIST</string>
    <string name="eventtype_own_player_goodplay">GUTE AKTION</string>
    <string name="eventtype_own_player_badplay">SCHLECHTE AKTION</string>
    <string name="eventtype_own_player_in">SPIELER REIN</string>
    <string name="eventtype_own_player_out">SPIELER RAUS</string>
    <string name="eventtype_own_player_yellow_card">GELBE KARTE</string>
    <string name="eventtype_own_player_red_card">ROTE KARTE</string>
    <string name="eventtype_own_player_injured">VERLETZT</string>
    <string name="eventtype_opposing_team_goal">GEGNER GOAL</string>
    <string name="eventtype_match_start">MATCH BEGINN</string>
    <string name="eventtype_match_pause">MATCH PAUSE</string>
    <string name="eventtype_match_finish">MATCH ENDE</string>

    <string name="player_list_empty">Keine Spieler ausgewählt</string>
    <string name="delete_player_not_allowed">Spieler kann nicht gelöscht werden, da ein Spieler-Ereignis vorhanden ist!</string>

    <string name="evaluate">Bewerten</string>
    <string name="player_active">Spieler aktiv</string>
    <string name="player_inactive">Spieler inaktiv</string>

</resources>

