<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eeeeee">

        <Button
            android:id="@+id/button_eventtype_goal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/goal"
            android:text="@string/eventtype_own_player_goal"/>

        <Button
            android:id="@+id/button_eventtype_assist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/assist"
            android:text="@string/eventtype_own_player_assist"/>

        <Button
            android:id="@+id/button_eventtype_goodplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/thumb_up"
            android:text="@string/eventtype_own_player_goodplay"/>

        <Button
            android:id="@+id/button_eventtype_badplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/thumb_down"
            android:text="@string/eventtype_own_player_badplay"/>

        <Button
            android:id="@+id/button_eventtype_player_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/player_in"
            android:text="@string/eventtype_own_player_in"/>

        <Button
            android:id="@+id/button_eventtype_player_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/player_out"
            android:text="@string/eventtype_own_player_out"/>

        <Button
            android:id="@+id/button_eventtype_yellow_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/yellow_card"
            android:text="@string/eventtype_own_player_yellow_card"/>

        <Button
            android:id="@+id/button_eventtype_red_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/red_card"
            android:text="@string/eventtype_own_player_red_card"/>

        <Button
            android:id="@+id/button_eventtype_injured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/first_aid_kit"
            android:text="@string/eventtype_own_player_injured"/>

    </LinearLayout>

</ScrollView>