<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eeeeee">

        <TextView
            android:id="@+id/textview_match_hometeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hometeam"
            />

        <EditText
            android:id="@+id/edittext_match_hometeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            />

        <TextView
            android:id="@+id/textview_match_guestteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guestteam"
            />

        <EditText
            android:id="@+id/edittext_match_guestteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dddddd"
            android:layout_margin="2dp">

            <RadioButton
                android:id="@+id/radiobutton_match_locationtype_homegame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homegame"/>

            <RadioButton
                android:id="@+id/radiobutton_match_locationtype_awaygame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awaygame"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dddddd"
            android:layout_margin="2dp">

            <RadioButton
                android:id="@+id/radiobutton_match_type_championship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/championship_play"/>

            <RadioButton
                android:id="@+id/radiobutton_match_type_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testplay_play"/>
        </RadioGroup>

        <DatePicker
            android:id="@+id/datepicker_match_date"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:background="#dddddd"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            />

        <TimePicker
            android:id="@+id/timepicker_match_time"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:timePickerMode="spinner"
            android:layout_margin="2dp"
            android:background="#dddddd"
            />

        <Button
            android:id="@+id/button_match_dialog_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            />

        <Button
            android:id="@+id/button_match_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            />

    </LinearLayout>

</ScrollView>