<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_player_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            />

        <EditText
            android:id="@+id/edittext_player_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            />

        <TextView
            android:id="@+id/textview_player_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            />

        <EditText
            android:id="@+id/edittext_player_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            />

        <TextView
            android:id="@+id/textview_player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playernumber"
            />

        <EditText
            android:id="@+id/edittext_player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text=""
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_picture"
                android:layout_width="300px"
                android:layout_height="300px"
                android:background="#EFF"
                />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FOTO"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button_player_dialog_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            />

        <Button
            android:id="@+id/button_player_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            />

    </LinearLayout>

</ScrollView>

