<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.bozaci.footballtrainertoolapp.MatchActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5px"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0px"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:padding="0px"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10px">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listview_selected_player"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_background_dark2light_gray"
                        />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_gravity="bottom"
                        android:background="#eeeeee">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:background="#cccccc"
                                android:weightSum="100">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="50"
                                    android:fontFamily="monospace"
                                    android:gravity="center"
                                    android:text="@string/guestteam"
                                    android:textColor="#000000"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    />

                                <Button
                                    android:id="@+id/button_goal_guestteam"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="50"
                                    android:text="@string/goal"
                                    />

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:background="#cccccc"
                                android:weightSum="100">

                                <LinearLayout
                                    android:layout_weight="100"
                                    android:layout_margin="1dp"
                                    android:background="#eeeeee"
                                    >

                                    <TextView
                                        android:id="@+id/textview_hometeam"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="40"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="-"
                                        android:textColor="#000000"
                                        android:textSize="14sp"
                                        android:textStyle="normal"
                                        />

                                    <TextView
                                        android:id="@+id/textview_score_hometeam"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_margin="5dp"
                                        android:layout_weight="9"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:inputType="numberDecimal"
                                        android:text="0"
                                        android:textColor="#551133"
                                        android:textSize="20sp"
                                        android:textStyle="bold"
                                        />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="2"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text=":"
                                        android:textColor="#551133"
                                        android:textSize="20sp"
                                        />

                                    <TextView
                                        android:id="@+id/textview_score_guestteam"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_margin="5dp"
                                        android:layout_weight="9"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:inputType="numberDecimal"
                                        android:text="0"
                                        android:textColor="#551133"
                                        android:textSize="20sp"
                                        android:textStyle="bold"
                                        />

                                    <TextView
                                        android:id="@+id/textview_guestteam"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="40"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="-"
                                        android:textColor="#000000"
                                        android:textSize="14sp"
                                        android:textStyle="normal"
                                        />
                                </LinearLayout>
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:background="#cccccc"
                                android:weightSum="100"
                                >

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_weight="50"
                                    android:layout_margin="1dp"
                                    android:background="#eeeeee"
                                    >

                                    <TextView
                                        android:id="@+id/textview_match_fulltimer_min"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="24"
                                        android:layout_margin="5dp"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="00"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        android:textStyle="normal"
                                        />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="2"
                                        android:layout_margin="5dp"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text=":"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        />

                                    <TextView
                                        android:id="@+id/textview_match_fulltimer_sec"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="24"
                                        android:layout_margin="5dp"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="00"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        android:textStyle="normal"
                                        />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_weight="50"
                                    android:layout_margin="1dp"
                                    android:background="#eee">

                                    <TextView
                                        android:id="@+id/textview_match_parttimer_min"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="24"
                                        android:layout_margin="5dp"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="00"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        android:textStyle="normal"
                                        />

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="2"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text=":"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        />

                                    <TextView
                                        android:id="@+id/textview_match_parttimer_sec"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="24"
                                        android:layout_margin="5dp"
                                        android:background="#dddddd"
                                        android:fontFamily="monospace"
                                        android:gravity="center"
                                        android:text="00"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        android:textStyle="normal"
                                        />
                                </LinearLayout>

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:background="#cccccc"
                                android:weightSum="100"
                                >
                                <Button
                                    android:id="@+id/button_start_match"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="33"
                                    android:textSize="10sp"
                                    android:text="@string/start_match"
                                    />

                                <Button
                                    android:id="@+id/button_pause_match"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="33"
                                    android:textSize="10sp"
                                    android:text="@string/pause_match"
                                    />

                                <Button
                                    android:id="@+id/button_finish_match"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="33"
                                    android:textSize="10sp"
                                    android:text="@string/finish_match"
                                    />

                            </TableRow>

                    </TableLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listview_event"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>


</LinearLayout>
